--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p style="color: red;">Create a webpage including HTML basic skeleton using offline HTML Editor and online sandbox Environment</p>
+    <p style="color: red;">Practical-1:Create a webpage including HTML basic skeleton using offline HTML Editor and online sandbox Environment</p>
      <h4>About Course</h4>
     <p>In this Full stack web development course we are going to use visual code studio editor and repl.it website to write and execute our HTML ,CSS and JS code.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum reprehenderit ratione quidem architecto deleniti! Dolor fuga alias laudantium consectetur nulla aliquam officia, veritatis sed maxime nesciunt magnam velit, molestias ipsa ab eaque, facere enim incidunt! Vero harum rerum, non hic veritatis corporis porro ex modi repellendus repudiandae dolore debitis esse illum quas ea accusantium ratione natus nihil distinctio, cumque quod at eos iusto quasi. Earum a optio eius dolor sunt nihil totam illo maxime! Deleniti, recusandae, sapiente et suscipit provident vel nisi corrupti officiis magni inventore obcaecati architecto ducimus placeat, illum voluptatem alias quos ipsum repellendus rerum? Asperiores, eius natus.</p>
