--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practical-1</title>
 </head>
 <body>
     <p style="color: red;">Practical-1:Create a webpage including HTML basic skeleton using offline HTML Editor and online sandbox Environment</p>
